--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Gold Miner</title>
   </head>
   <body>
+
     <p id="goldMined">0 Gold Mined</p>
     <button onclick="mineGold()">Mine Gold</button>
     <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
-    <button onclick="buyWorkers()" id="perWorkerUpgrade">Hire a Worker to mine for you (Currently 0) Cost: 100 Gold</button>
-    <script src="main.js" charset="utf-8" type="text/javascript"></script>
+    <button onclick="buyWorkers()" id="perWorkersUpgrade">Hire a Worker to mine for you (Currently 0) Cost: 100 Gold</button>
+    <script src="C:\Users\Daniel\Desktop\Test\Incremental\main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
