--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Gold Miner</title>
+    <style>
+    body {
+      text-align: left;
+      color: black;
+      background-image: url(405481.jpg)
+     
+
+    }
+  </style>
   </head>
   <body>
-
     <p id="goldMined">0 Gold Mined</p>
-    <button onclick="mineGold()">Mine Gold</button>
-    <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold</button>
-    <button onclick="buyWorkers()" id="perWorkersUpgrade">Hire a Worker to mine for you (Currently 0) Cost: 100 Gold</button>
+    <button onclick="mineGold()">Mine Gold</button></body></html><br/>
+    <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold </button><br/>
+    <button onclick="buyWorkers()" id="perWorkersUpgrade">Hire a Worker to mine for you (Currently 0) Cost: 100 Gold </button><br/>
     <button onclick="buyWorkersUpgrades()" id="perWorkersToolUpgrade">Buy your workers better tools (Currently 1) Cost: 1000 Gold </button>
-    <script src="main.js" charset="utf-8" type="text/javascript"></script>
+    <script src="C:\Users\Daniel\Desktop\Test\Incremental\main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
