--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold </button><br/>
     <button onclick="buyWorkers()" id="perWorkersUpgrade">Hire a Worker to mine for you (Currently 0) Cost: 100 Gold </button><br/>
     <button onclick="buyWorkersUpgrades()" id="perWorkersToolUpgrade">Buy your workers better tools (Currently 1) Cost: 1000 Gold </button>
-    <script src="C:\Users\Daniel\Desktop\Test\Incremental\main.js" charset="utf-8" type="text/javascript"></script>
+    <script src="main.js" charset="utf-8" type="text/javascript"></script>
   </body>
 </html>
