--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <p id="goldMined">0 Gold Mined</p>
-    <button onclick="mineGold()">Mine Gold</button></body></html><br/>
+    <button onclick="mineGold()">Mine Gold</button></html><br/>
     <button onclick="buyGoldPerClick()" id="perClickUpgrade">Upgrade Pickaxe (Currently Level 1) Cost: 10 Gold </button><br/>
     <button onclick="buyWorkers()" id="perWorkersUpgrade">Hire a Worker to mine for you (Currently 0) Cost: 100 Gold </button><br/>
     <button onclick="buyWorkersUpgrades()" id="perWorkersToolUpgrade">Buy your workers better tools (Currently 1) Cost: 1000 Gold </button>
